# sync-io

./: CMakeLists.txt
client/: CMakeLists.txt  client.cpp
include/: PipeIO.h  SyncIO.h
server/: CMakeLists.txt  Server.cpp
src/: PipeIO.cpp
